# gcp_logging_agents

./: .gitignore  README.md  dump_schemas.sh
docs/: ARCHITECTURE.md
gcp_audit_buddy/: .env.example  pyproject.toml
gcp_audit_buddy/gcp_audit_buddy_agent/: __init__.py  agent.py  prompts.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/bq_audit_log_agent_pkg/: agent.py  prompts.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/bq_monitoring_log_agent_pkg/: agent.py  prompts.py
gcp_audit_buddy/gcp_audit_buddy_agent/root_agent_pkg/: agent.py  prompts.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/sub_agents/bq_audit_log_agent_pkg/: agent.py  prompts.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/sub_agents/bq_audit_log_agent_pkg/schemas/: activity_schema.py  data_access_schema.py  system_event_table_schema.py
gcp_audit_buddy/gcp_audit_buddy_agent/sub_agents/bq_monitoring_log_agent_pkg/: agent.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/sub_agents/compute_monitoring_log_agent_pkg/: agent.py  prompts.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/sub_agents/visualization_agent_pkg/: agent.py  tools.py
gcp_audit_buddy/gcp_audit_buddy_agent/visualization_agent_pkg/: agent.py  prompts.py  tools.py
mcp_time_service/: package.json  server.js
schemas/: cloudaudit_googleapis_com_activity.txt  cloudaudit_googleapis_com_data_access.txt  cloudaudit_googleapis_com_system_event.txt
schemas/overwatch_logs/: GCEGuestAgent.json  GCEGuestAgentManager.json  OSConfigAgent.json  alloydb_googleapis_com_postgres_log.json  diagnostic_log.json  (+11 more)
